Added a retain to the bucket so it will not be deleted automatically

--- a/cfn-logging-bucket.yaml
+++ b/cfn-logging-bucket.yaml
@@ -3,6 +3,7 @@ Resources:
   LoggingBucket:
     Type: AWS::S3::Bucket
     Properties:
+      DeletionPolicy: Retain
       AccessControl: LogDeliveryWrite
       LifecycleConfiguration:
         Rules:
