Changed so the BucketName is based on a formula. This changed forced the removal of DeletionPolicy, but not concerned since a non-empty bucket cannot be deleted.

--- a/cfn-logging-bucket.yaml
+++ b/cfn-logging-bucket.yaml
@@ -3,7 +3,7 @@ Resources:
   LoggingBucket:
     Type: AWS::S3::Bucket
     Properties:
-      DeletionPolicy: Retain
+      BucketName: !Join [ -, [ 'logging', !Ref 'AWS::Region', !Ref 'AWS::AccountId' ]]
       AccessControl: LogDeliveryWrite
       LifecycleConfiguration:
         Rules:
